Work on compilation, still broken