@@ -14,6 +14,26 @@
   <version>1.0-SNAPSHOT</version>
   <name>tddasm-maven-plugin Maven Mojo</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
 
     <dependency>
@@ -39,6 +59,14 @@
       <artifactId>maven-project</artifactId>
       <version>2.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>net.nightwhistler</groupId>
+      <artifactId>tddasm</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
+
+
 </project>
